# bot-scythe-marie-curie

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.tf  docker-compose.yml
.github/workflows/: deploy.yml  deploy_in_aws_with_terraform.yml  pipeline_docker.yml
src/: main.rs  prelude.rs  redis_con.rs
src/event_handle/: add_handle.rs  create_roles.rs  death_handle.rs  fun_handle.rs  mod.rs  music_handle.rs  silence_handle.rs  welcome_handle.rs
src/handler/: add.rs  create_roles.rs  death.rs  fun.rs  music.rs  silence.rs  welcome.rs
src/model/: member.rs  membro.rs  mod.rs
src/redis_connection/: mod.rs  redis_con.rs
src/slash_command/: age_command.rs  ban_words_command.rs  details_command.rs  life_command.rs  mod.rs  remove_ban_words_command.rs  silence_command.rs  voice_command.rs
src/slash_command/general/: age.rs  ban_words.rs  details.rs  life.rs  remove_ban_words.rs  silence.rs
src/slash_command/voice/: music.rs
src/slash_command/voice_command/: mod.rs  music_command.rs
