[package]
name = "bot-scythe-marie-curie"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
serenity = {version = "0.12.2", features = ["cache","builder","chrono","collector","client","framework","http","gateway","utils"]}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
chrono-tz = "0.9.0"
chrono = "0.4.38"
redis = { version = "0.25.4", features = ["tokio-comp"] }
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.119"