[package]
name = "bot-scythe-marie-curie"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
serenity = {version = "0.12.2", features = ["cache","builder","chrono","collector","client","framework","http","gateway","utils","voice","full","standard_framework"]}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread","full"] }
chrono-tz = "0.9.0"
chrono = "0.4.38"
redis = { version = "0.25.4", features = ["tokio-comp"] }
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.119"
songbird = {version = "0.4.2", features = ["default","gateway","driver","rustls","serenity","receive","twilight","builtin-queue","native","full-doc"]}
reqwest = {version = "0.11.27", features = ["default","json"]}
symphonia = "0.5.4"
strsim = "0.11.1"
